# AkiraRobotService

akira_apps/: mapeo.rviz  navegacion.rviz  navegacion_dos.rviz
akira_apps/do_akira/: Mapeo_final_con_ratb-map_launch  config_motores  navegacion_1
akira_apps/do_akira/transformaciones_nery/: tf_broadcaster.cpp
akira_apps/laser/config/: transforms.txt
akira_apps/mapping/: gmapping.launch
akira_apps/mapping/maps/: casa_2.pgm  casa_2.yaml  casa_3.pgm  casa_3.yaml  escenario1.pgm  escenario1.yaml  willow-erratic.world
akira_apps/navigation/: NOTA  getpose.py  move.py  move_voz.py  nav.rviz
akira_apps/navigation/config/: amcl.launch  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base.launch  move_base_params.yaml  navfn_global_planner_params.yaml
akira_apps/navigation/config_2/: amcl.launch  amcl.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  move_base.launch  (+3 more)
devel/: .catkin  .rosinstall  local_setup.sh  setup.sh
src/akira_descriptor/: CMakeLists.txt
src/laser_analysis/: CMakeLists.txt  README.md
src/person_detection/: CMakeLists.txt  README.md  package.xml
src/rgbd_person_detection/: CMakeLists.txt  README.md  package.xml
src/rococo_navigation/: CMakeLists.txt  README.md
src/thin_msgs/: CMakeLists.txt
src/thin_state_publisher/: CMakeLists.txt
src/thin_state_publisher/src/ros_wrappers/: CMakeLists.txt  image_message_listener.cpp  image_message_listener.h  imu_interpolator.cpp  imu_interpolator.h  imu_message_listener.cpp  imu_message_listener.h  joint_state_message_listener.cpp  joint_state_message_listener.h  laser_message_listener.cpp  laser_message_listener.h  multiecholaser_message_listener.cpp  multiecholaser_message_listener.h  odom_tf_publisher.cpp  odom_tf_publisher.h  spherical_image_message_listener.cpp  spherical_image_message_listener.h
src/thin_state_publisher/src/txt_io/: CMakeLists.txt  base_image_message.cpp  imu_message.cpp  imu_message.h  joint_state_message.cpp  joint_state_message.h  laser_message.cpp  laser_message.h  laser_viewer.cpp  laser_viewer.h  message_seq_synchronizer.cpp  message_seq_synchronizer.h  message_timestamp_synchronizer.cpp  message_timestamp_synchronizer.h  pose_message.cpp  pose_message.h  sensor_message_sorter.cpp  sensor_message_sorter.h  spherical_image_message.cpp  spherical_image_message.h  static_transform_message.cpp  txt_io_dump_reader_app.cpp  txt_io_generate_associations.cpp
(+263 files in other folders)
